# reddit

./: .drone.yml  .pre-commit-config.yaml  BeautifulSoup.py  README.md  SECURITY.md  Vagrantfile  install-reddit.sh  install-tippr.sh  l2cs.py  pyproject.toml  ruff_selected.json  ruff_selected_after3.json  simplejson.py  snudown.py  unidecode.py
Captcha/: __init__.py
baseplate/: __init__.py  config.py  crypto.py  events.py  observers.py  secrets.py  server.py
cassandra/: __init__.py  cluster.py  query.py  util.py
docs/: ADMIN_FEATURES.md  INSTALL_REDDIT.md  INSTALL_tippr.md  PRODUCTION_DEPLOYMENT.md  gold-payments.md  local-db.md
install/: README.md  done.sh  drone.sh  install.cfg  install_apt.sh  install_cassandra.sh  install_services.sh  reddit.sh  setup_cassandra.sh  setup_mcrouter.sh  setup_postgres.sh  setup_rabbitmq.sh  tippr.sh  travis.sh
pycassa/: __init__.py  batch.py  columnfamily.py  pool.py  system_manager.py  types.py  util.py
pylons/: __init__.py  configuration.py  error.py  middleware.py  util.py  wsgiapp.py
r2/: Makefile  Makefile.py  check-code  coverage.sh  example.ini  setup.py  test.ini  updateini.py
scripts/: add_to_collection  compute_time_listings  hashdist.py  inject_test_data.py  manage-consumers  promoted_links.py  rebrand_config.py  rebrand_to_tippr.py  rename_tippr_to_tippr.py  replace_reddit_envvars.py  replace_tippr_com_with_net.py  replace_tippr_envvars.py  stylecheck_git_diff.sh  tracker.py  upload_static_files_to_s3.py  wrap-job
solr/: README.md  schema.xml  schema4.xml
tools/: bootstrap_db.py
upstart/: tippr-boot.conf  (+34 more)
(+475 files in other folders)
