[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit"
version = "0.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
# Add project root to pythonpath so the custom pylons shim is found before site-packages
pythonpath = ["."]
testpaths = ["r2/r2/tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = ["I"]

[tool.black]
line-length = 88
target-version = "py312"
